		Added family planning questions
		Changed the guardian registration to only accept first name, surname, gender and relationship
		Ensured that the registered guardian is shown on the dashboard
		Added registered for tips and reminders to the list of outcomes
		Added an option for a secondary outcome
         --Cut off from the previous version
         Tasks added by Ernest
            Inbound calls:
                -Added ANC connect Registration Flow (for new clients)
                -Added ANC connect Registration Flow (for Existing clients)
                -Added "Edit connect button" for changing ANC enrollment
                -Added call to Record ANC
                -Added a functionality for searching clients by ANC connect ID
                -Added "Referral to Emergency Transport" as an option in an outcome encounter
         Tasks Added by Blessings
            Generic encounter:
                -Added ANC Visit Encounter
                -Added Delivery Encounter
                -Added Birth Plan Encounter
                -Added HSA Encounter
                -Added HSA role [metadata]
                -Added migration for HSA villages
                -Added script for loading villages
                -Added Late for ANC Follow-up Call
                -Added Late for Delivery Follow-Up Call
            
-------------------------------------------------------------------------------------------------------------
2014-11-21
	DN - updated the query pulling health facilities to pull distinct facility names
	DN - updated the ANC concent number to allow 5 digits
  DN - removed G. before HSA when listing patients in ANC followup
  DN - replaced anc_visit with hsa_visit in the ancfollowuplist view.
2014-11-26
  DN - replaced '/people/villages' with '/people/villages_demographics
  DN - changed 'Home village' label to 'Current Village'
2014-11-27
  DN - added .uniq to distinctly list village names